--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/styled-components": "^5.1.36",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "lucide-react": "^0.562.0",
     "react": "19.2.1",
@@ -29,6 +30,7 @@
     "react-intersection-observer": "^9.15.1",
     "react-lazy-load-image-component": "^1.6.3",
     "styled-components": "^6.1.19",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
   "devDependencies": {
